[gd_scene load_steps=3 format=3 uid="uid://h1k8x7qm1wn2w"]

[ext_resource type="Script" path="res://scripts/BaseSlide.gd" id="1_1"]
[ext_resource type="Script" path="res://scripts/slides/Slide14.gd" id="2_1"]

[node name="Slide14_Animacoes1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
text = "Dando Vida ao Personagem"
horizontal_alignment = 1

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 60

[node name="ExplanationPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="WhatIsAnimation" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 28
text = "O que s√£o anima√ß√µes?"
autowrap_mode = 3

[node name="Point1" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚Ä¢ Trocar imagens rapidamente (flipbook)"
autowrap_mode = 3

[node name="Point2" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚Ä¢ Estados visuais (idle, walk, jump)"
autowrap_mode = 3

[node name="Point3" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚Ä¢ AnimationPlayer: ferramenta da Godot"
autowrap_mode = 3

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FlipbookDiagram" type="Panel" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Diagrama Flipbook:"
horizontal_alignment = 1

[node name="FramesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Frame1" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(1, 0.5, 0.5, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer/Frame1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -13.0
offset_right = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1

[node name="Arrow1" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚Üí"

[node name="Frame2" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(0.5, 1, 0.5, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer/Frame2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -13.0
offset_right = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 1

[node name="Arrow2" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚Üí"

[node name="Frame3" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(0.5, 0.5, 1, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer/Frame3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -13.0
offset_right = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1

[node name="Arrow3" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚Üí"

[node name="Frame4" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(1, 1, 0.5, 1)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ExplanationPanel/FlipbookDiagram/VBoxContainer/FramesContainer/Frame4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -13.0
offset_right = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
horizontal_alignment = 1

[node name="DemoPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "Demonstra√ß√£o ao Vivo:"
horizontal_alignment = 1

[node name="AnimatedCharacter" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.3, 0.3, 0.5, 1)

[node name="CharacterSprite" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel/AnimatedCharacter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -26.0
offset_right = 50.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "üßç"
horizontal_alignment = 1

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Estado: IDLE"
horizontal_alignment = 1

[node name="ControlButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel/ControlButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚ñ∂ Play"

[node name="StopButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/DemoPanel/ControlButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚è∏ Stop"

[node name="ResultPreview" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Preview: Personagem vai piscar/animar suavemente"
horizontal_alignment = 1

[node name="AnimationController" type="Node" parent="."]
script = ExtResource("2_1")
